--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   bloc: ^8.1.4
   equatable: ^2.0.5
   flutter_native_splash: ^2.4.1
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
