--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   equatable: ^2.0.5
   flutter_native_splash: ^2.4.1
   transparent_image: ^2.0.1
+  png_optimizer: ^0.0.1-pre.0
+  supabase_flutter: ^2.8.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -22,7 +25,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/assets/images/
+    - path: lib/assets/images/
+      transformers:
+        - package: png_optimizer
 
 flutter_native_splash:
   android: true
