--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - path: lib/assets/images/
       transformers:
         - package: png_optimizer
@@ -41,4 +42,4 @@ flutter_native_splash:
     color: "#588b78"
     image: "lib/assets/splash/foreground_logo.png"
     icon_background_color: "#588b78"
-
+  
