--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   png_optimizer: ^0.0.1-pre.0
   supabase_flutter: ^2.8.0
   flutter_dotenv: ^5.1.0
+  google_sign_in: ^6.2.1
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
