--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   flutter_dotenv: ^5.1.0
   google_sign_in: ^6.2.1
   flutter_bloc: ^8.1.6
+  go_router: ^14.6.0
+  fpdart: ^1.1.1
+  get_it: ^8.0.2
+  flutter_form_builder: ^9.5.0
 
 dev_dependencies:
   flutter_test:
