--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_dotenv: ^5.1.0
   google_sign_in: ^6.2.1
   flutter_bloc: ^8.1.6
+  dropdown_button2: ^2.3.9
+  dio : ^5.7.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
