--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,13 @@ dependencies:
   fpdart: ^1.1.1
   get_it: ^8.0.2
   flutter_form_builder: ^9.5.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  
 
 flutter:
   uses-material-design: true
