--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   fpdart: ^1.1.1
   get_it: ^8.0.2
   flutter_form_builder: ^9.5.0
+  form_builder_validators: ^11.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
