--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   get_it: ^8.0.2
   flutter_form_builder: ^9.5.0
   intl: ^0.19.0
+  webview_flutter: ^4.2.1
+
 
 dev_dependencies:
   flutter_test:
