--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   google_sign_in: ^6.2.1
   flutter_bloc: ^8.1.6
+  intl: ^0.20.1
+  mobile_scanner: ^6.0.2
 
 dev_dependencies:
   flutter_test:
