--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_form_builder: ^9.5.0
   intl: ^0.19.0
   webview_flutter: ^4.2.1
+  mobile_scanner: ^6.0.2
 
 
 dev_dependencies:
@@ -40,8 +41,7 @@ flutter:
   assets:
     - .env
     - path: lib/assets/images/
-      transformers:
-        - package: png_optimizer
+      
 
 flutter_native_splash:
   android: true
